05-Deseos-Ionic: Se actualiza la app, se agrega manejo de sliding item en listas

--- a/Ejercicios/05-Deseos-Ionic/ionic.config.json
+++ b/Ejercicios/05-Deseos-Ionic/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "deseos",
-  "app_id": "f993a7ee",
+  "integrations": {},
   "type": "ionic-angular",
-  "integrations": {}
+  "id": "f993a7ee"
 }
